--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 .nav-link {
   color: white;
   text-decoration: none;
@@ -10,3 +12,25 @@
   font-weight: bold;
   border-bottom: 2px solid #f1f3f3;
 }
+
+
+.img-overlay{
+  position: absolute;
+  top:0;
+  left:0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0.8);}
+
+  #home {
+    background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1500&q=80');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 300px;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+
+  }
+
